wp-content/themes/wpshop/.happypack/s--241747049
SyntaxError: Unexpected token, expected , (374:35)

[0m [90m 372 | [39m
 [90m 373 | [39m    }[33m,[39m
[31m[1m>[22m[39m[90m 374 | [39m    unhighlight[33m:[39m debounce(element) {
 [90m     | [39m                                   [31m[1m^[22m[39m
 [90m 375 | [39m
 [90m 376 | [39m      [90m// console.log('corrected error', element);[39m
 [90m 377 | [39m[0m

Error
    at transpile (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/arobbins/www/wpshop/public/wp-content/themes/wpshop/node_modules/happypack/lib/HappyWorker.js:32:3)